--- a/.envExample
+++ b/.envExample
@@ -1,3 +1,6 @@
 APP_ID="YOUR_APP_ID"
 WEBHOOK_SECRET="YOUR_WEBHOOK_SECRET"
 PRIVATE_KEY_PATH="YOUR_PRIVATE_KEY_PATH"
+API_TOKEN=
+AI_ENDPOINT=
+DB_URL=
