--- a/.envExample
+++ b/.envExample
@@ -1,7 +1,19 @@
-APP_ID="YOUR_APP_ID"
-WEBHOOK_SECRET="YOUR_WEBHOOK_SECRET"
-PRIVATE_KEY_PATH="YOUR_PRIVATE_KEY_PATH"
-PRIVATE_KEY_NAME=
+APP_ID="GH APP ID"
+WEBHOOK_SECRET=""
+PRIVATE_KEY_PATH="./.pem"
+PRIVATE_KEY_NAME=".pem"
+API_TOKEN="HELLPER API TOKEN"
+AI_ENDPOINT=http://
+HELPER_URL=http://
+DB_URL=postgresql://
+
+GH_USERNAME="GH USERNAME ASSOCIATED WITH KEY BELOW"
+GH_TOKEN="GH CLASSIC TOKEN"
+
+HELPER_URL=http://
+MODEL=
 API_TOKEN=
-AI_ENDPOINT=
-DB_URL=
+
+EMBEDDINGS_AI_URL=http://
+EMBEDDINGS_AI_KEY=
+EMBEDDINGS_DB_URL=postgresql://
