--- a/.envExample
+++ b/.envExample
@@ -5,14 +5,12 @@ WEBHOOK_SECRET=""
 PRIVATE_KEY_PATH="./.pem"
 PRIVATE_KEY_NAME=".pem"
 API_TOKEN="HELLPER API TOKEN"
-AI_ENDPOINT=http://
-HELPER_URL=http://
-DB_URL=postgresql://
+DB_LINK=postgresql://
 
 GH_USERNAME="GH USERNAME ASSOCIATED WITH KEY BELOW"
 GH_TOKEN="GH CLASSIC TOKEN"
 
-HELPER_URL=http://
+AI_URL=http://
 MODEL=
 API_TOKEN=
 
